@@ -1,7 +1,8 @@
 2.3 Released ??? 2014
 
 * Add background image, which allow in particular semi-transparent background color.
-* Add function Rasterize() and MGL command 'rasterize' to save current image as background one.
+* Add function Rasterize() and MGL command 'rasterize' to save current image as background.
+* Add function LoadBackground() and MGL command 'background' to load image for background.
 * Add arrow style 'X'
 * Add manual dash style, like "{df090}"
 * Add manual mask style, like "{s00ff00182424f800}"
